--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test-files": "node test-folder-files.js"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "ali-oss": "^6.20.0",
     "chokidar": "^3.6.0",
     "express": "^4.21.2",
