--- a/com.screensync.server.plist
+++ b/com.screensync.server.plist
@@ -21,7 +21,12 @@
     <dict>
         <key>SuccessfulExit</key>
         <false/>
+        <key>Crashed</key>
+        <true/>
     </dict>
+    
+    <key>ThrottleInterval</key>
+    <integer>30</integer>
     
     <key>StandardOutPath</key>
     <string>__INSTALL_PATH__/server.log</string>
