chore: optimize packaging size and suppress installer errors

--- a/installer/package.json
+++ b/installer/package.json
@@ -15,9 +15,11 @@
     "compression": "maximum",
     "asar": true,
     "dmg": {
+      "background": null,
+      "backgroundColor": "#ffffff",
       "contents": [
         {
-          "x": 410,
+          "x": 270,
           "y": 190,
           "type": "file"
         }
